Version 6.2 - Запуск перенесен в класс Main - Объединил HistoryHandler и PrioritizedHandler    - Объединил тесты этих классов - Создал enum HttpStatusCode для перечисления HTTP кодов    - Переписаны handlers - исправлены прочие ошибки